--- a/customer/templates/customer/about.html
+++ b/customer/templates/customer/about.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-1">
-        <div class="card col-md-5 col-sm-12 offset-md-1 p-4 text-center">
+        <div class="col-md-10 col-sm-12 offset-md-1 p-4 text-center">
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
                 massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
