--- a/templates/base.html
+++ b/templates/base.html
@@ -79,13 +79,11 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by Code Instituters</p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
-        </p>
+    <footer class="page-footer font-small green fixed-bottom">
+        <div class="footer-copyright text-center py-3">&copy; 2024 Copyright:
+            <a href="http://localhost:8000">ParaBIM Ltd.</a>
+            <a class="ml-3" href="#"> Restaurant Login</a>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
