--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
     <!-- Footer -->
     <footer class="page-footer font-small green fixed-bottom">
         <div class="footer-copyright text-center py-3">&copy; 2024 Copyright:
-            <a href="http://localhost:8000">ParaBIM Ltd.</a>
+            <a href="https://parabim.ie">ParaBIM Ltd.</a>
             <a class="ml-3" href="#"> Restaurant Login</a>
         </div>
     </footer>
