--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+<!-- Page Header -->
+<header class="masthead"
+    style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                    <h1>Thorin &amp; Company</h1>
+                    <span class="subheading">Thorin and his company of dwarves</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
 <!-- index.html content starts here -->
 <div class="container mb-5">
