Add chef's bg image

--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -4,14 +4,14 @@
 {% block content %}
 <!-- Page Header -->
 <header class="masthead"
-    style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+    style="background-image: url('https://res.cloudinary.com/dmebot5lf/image/upload/v1711406330/Firefly_setting_takes_place_in_stainless_steel_kitchen_all_cabinets_in_the_background_chef_is_a_be_1_lxazy1.jpg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>Thorin &amp; Company</h1>
-                    <span class="subheading">Thorin and his company of dwarves</span>
+                    <h1>Nada's Kitchen</h1>
+                    <span class="subheading">Nada's Kitchen</span>
                 </div>
             </div>
         </div>
