Add styles to bg

--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -4,34 +4,27 @@
 {% block content %}
 
 <!-- Page Header -->
-<header class="masthead"
-    style="background-image: url('https://res.cloudinary.com/dmebot5lf/image/upload/v1711406330/Firefly_setting_takes_place_in_stainless_steel_kitchen_all_cabinets_in_the_background_chef_is_a_be_1_lxazy1.jpg')">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <div class="site-heading">
-                    <h1>Nada's Kitchen</h1>
-                    <span class="subheading">Nada's Kitchen</span>
+<div class="header-container">
+    <header class="masthead"
+        style="background-image: url('https://res.cloudinary.com/dmebot5lf/image/upload/v1711406330/Firefly_setting_takes_place_in_stainless_steel_kitchen_all_cabinets_in_the_background_chef_is_a_be_1_lxazy1.jpg')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Nada's Kitchen</h1>
+                        <span class="subheading">Nada's Kitchen</span>
+                        <div class="row justify-content-center">
+                            <button type="button" class="btn btn-success rounded-pill">Order Now!</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
+</div>
 
 <!-- index.html content starts here -->
-<div class="container mb-5">
-    <div class="row justify-content-center mt-5">
-        <div class="col-md-8 col-sm-12 offset-md-1 text-center">
-            <h1>Oreder Your Lunchbox</h1>
-        </div>
-    </div>
-    <div class="row justify-content-center mt-1">
-        <div class="card col-md-5 col-sm-12 offset-md-1 p-4 text-center">
-            <h2>Book Your Lunchbox</h2>
-            <button class="btn btn-outline-primary">Order Now!</button>
-        </div>
-    </div>
-</div>
+
 
 {% endblock content %}
