--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,18 @@
+nav {
+    position: fixed; /* Fix the position of the navigation menu */
+    top: 0; /* Align the navigation menu to the top */
+    width: 100%; /* Ensure the navigation menu spans the entire width of the viewport */
+    z-index: 1000; /* Set a high z-index to ensure the navigation menu appears above other elements */
+}
 
 header.masthead {
     margin-bottom: 50px;
     background: no-repeat center center;
     background-color: #868e96;
-    background-attachment: scroll;
+    background-attachment: fixed;
     position: relative;
     background-size: cover;
+    height: 100vh; /* Set the height to 100% of the viewport height */
 }
 
 header.masthead .overlay {
@@ -26,7 +33,6 @@ header.masthead .site-heading {
 }
 
 @media only screen and (min-width: 768px) {
-
     header.masthead .page-heading,
     header.masthead .post-heading,
     header.masthead .site-heading {
@@ -56,7 +62,6 @@ header.masthead .site-heading .subheading {
 }
 
 @media only screen and (min-width: 768px) {
-
     header.masthead .page-heading h1,
     header.masthead .site-heading h1 {
         font-size: 80px;
@@ -108,4 +113,9 @@ header.masthead .post-heading .meta a {
     }
 }
 
-
+@media only screen and (min-width: 768px) {
+    header.masthead {
+        height: auto; /* Change the height to auto to allow the background to extend to the footer */
+        min-height: 100vh; /* Ensure the background extends to at least the viewport height */
+    }
+}
