Add order button styling

--- a/customer/templates/customer/index.html
+++ b/customer/templates/customer/index.html
@@ -15,7 +15,7 @@
                         <h1>Nada's Kitchen</h1>
                         <span class="subheading">Nada's Kitchen</span>
                         <div class="row justify-content-center">
-                            <button type="button" class="btn rounded-pill">Order Now!</button>
+                            <button type="button" class="btn rounded-pill dark green">Order Now!</button>
                         </div>
                     </div>
                 </div>
