--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,78 +5,39 @@
 {% block head_title %}{% trans "Signup" %}{% endblock head_title %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
-      <h3>{% trans "Sign Up" %}</h3>
 
-      <p>{% blocktrans %}
-        Welcome to our platform. Please fill in the form below to sign up.
-        If you already have an account, please <a class="link" href="{{ login_url }}">sign in</a> instead.
-        {% endblocktrans %}</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
-      <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        <div class="form-group">
+<div class="signup-form col-lg-6 col-md-8 mt-3 offset-lg-3 offset-md-2">
+  <h2>{% trans "Sign Up" %}</h2>
+  <br>
+  <form method="post" action="{% url 'account_signup' %}">
+      {% csrf_token %}
+      <div class="form-group">
+          <label for="id_username">{% trans "Username" %} *</label>
+          <input type="text" id="id_username" name="username" class="form-control" required>
+      </div>
+      <div class="form-group">
           <label for="id_first_name">{% trans "First Name" %} *</label>
-          <input type="text" class="form-control" id="id_first_name" name="first_name" required>
-        </div>
-        <div class="form-group">
+          <input type="text" id="id_first_name" name="first_name" class="form-control" required>
+      </div>
+      <div class="form-group">
           <label for="id_last_name">{% trans "Last Name" %} *</label>
-          <input type="text" class="form-control" id="id_last_name" name="last_name" required>
-        </div>
-        <div class="form-group">
+          <input type="text" id="id_last_name" name="last_name" class="form-control" required>
+      </div>
+      <div class="form-group">
           <label for="id_email">{% trans "Email" %} *</label>
-          <input type="email" class="form-control" id="id_email" name="email" required>
-        </div>
-        <div class="form-group">
-          <label for="id_country_code">{% trans "Country Code" %} *</label>
-          <select class="form-control" id="id_country_code" name="country_code" required>
-            <option value="IE" selected>{% trans "Ireland" %}</option>
-            <!-- Add other country options as needed -->
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="id_mobile_number">{% trans "Mobile Number" %} *</label>
-          <input type="text" class="form-control" id="id_mobile_number" name="mobile_number" required>
-        </div>
-        <div class="form-group">
-          <label for="id_first_line_address">{% trans "First Line Address" %} *</label>
-          <input type="text" class="form-control" id="id_first_line_address" name="first_line_address" required>
-        </div>
-        <div class="form-group">
-          <label for="id_second_line_address">{% trans "Second Line Address" %}</label>
-          <input type="text" class="form-control" id="id_second_line_address" name="second_line_address">
-        </div>
-        <div class="form-group">
-          <label for="id_eir_code">{% trans "Eircode" %} *</label>
-          <input type="text" class="form-control" id="id_eir_code" name="eir_code" required>
-        </div>
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button class="btn btn-signup right" type="submit">{% trans "Sign Up" %} &raquo;</button>
-      </form>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 mt-3 offset-md-2">
-      <form class="signup" id="signup_form" method="post"
-        action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}"
-          value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button class="btn btn-signup right" type="submit">
-          {% trans "Sign Up" %} &raquo;</button>
-      </form>
-    </div>
-  </div>
+          <input type="email" id="id_email" name="email" class="form-control" required>
+      </div>
+      <div class="form-group">
+          <label for="id_password1">{% trans "Password" %} *</label>
+          <input type="password" id="id_password1" name="password1" class="form-control" required>
+      </div>
+      <div class="form-group">
+          <label for="id_password2">{% trans "Confirm Password" %} *</label>
+          <input type="password" id="id_password2" name="password2" class="form-control" required>
+      </div>
+      <button type="submit" class="btn btn-dark">{% trans "Sign Up" %} &raquo;</button>
+  </form>
 </div>
 
 {% endblock content %}
+
