--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,34 +10,65 @@
   <h2>{% trans "Sign Up" %}</h2>
   <br>
   <form method="post" action="{% url 'account_signup' %}">
-      {% csrf_token %}
-      <div class="form-group">
-          <label for="id_username">{% trans "Username" %} *</label>
-          <input type="text" id="id_username" name="username" class="form-control" required>
+    {% csrf_token %}
+    <div class="form-group">
+      <label for="id_username">{% trans "Username" %} *</label>
+      <input type="text" id="id_username" name="username" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="id_first_name">{% trans "First Name" %} *</label>
+      <input type="text" id="id_first_name" name="first_name" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="id_last_name">{% trans "Last Name" %} *</label>
+      <input type="text" id="id_last_name" name="last_name" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="id_email">{% trans "Email" %} *</label>
+      <input type="email" id="id_email" name="email" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="id_password1">{% trans "Password" %} *</label>
+      <input type="password" id="id_password1" name="password1" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="id_password2">{% trans "Confirm Password" %} *</label>
+      <input type="password" id="id_password2" name="password2" class="form-control" required>
+    </div>
+
+    <!-- Button trigger modal -->
+    <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#staticBackdrop">
+      {% trans "Sign Up" %} &raquo;
+    </button>
+
+    <!--form validation modal-->
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="modal-body">
+              {% if errors %}
+              <script type="text/javascript">
+                $(document).ready(function () {
+                  $('#staticBackdrop').modal('show');
+                });
+              </script>
+              {% endif %}
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
       </div>
-      <div class="form-group">
-          <label for="id_first_name">{% trans "First Name" %} *</label>
-          <input type="text" id="id_first_name" name="first_name" class="form-control" required>
-      </div>
-      <div class="form-group">
-          <label for="id_last_name">{% trans "Last Name" %} *</label>
-          <input type="text" id="id_last_name" name="last_name" class="form-control" required>
-      </div>
-      <div class="form-group">
-          <label for="id_email">{% trans "Email" %} *</label>
-          <input type="email" id="id_email" name="email" class="form-control" required>
-      </div>
-      <div class="form-group">
-          <label for="id_password1">{% trans "Password" %} *</label>
-          <input type="password" id="id_password1" name="password1" class="form-control" required>
-      </div>
-      <div class="form-group">
-          <label for="id_password2">{% trans "Confirm Password" %} *</label>
-          <input type="password" id="id_password2" name="password2" class="form-control" required>
-      </div>
-      <button type="submit" class="btn btn-dark">{% trans "Sign Up" %} &raquo;</button>
+    </div>
   </form>
 </div>
-
 {% endblock content %}
-
